--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -764,3 +764,5 @@ select.just-validate-success-field {
 .slider_itinerari .splide__pagination { display: block; margin-top: 1em; }
 .slider_itinerari .splide__pagination__page { width: 2em; height: .2em; background-color: rgba(var(--bs-black-rgb),.4); margin: 0 .5em 0 0; }
 .slider_itinerari .splide__pagination__page .is-active { background-color: var(--bs-primary) }
+
+.area-tematica { border-bottom: 1px solid var(--bs-secondary); }
