--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -555,11 +555,11 @@ a.card-progetto { background-color: transparent; text-decoration: none; }
 .card-progetto .card-body .card-text { color: var(--bs-secondary); line-height: 1.2em; }
 
 a.card.card-bando { text-decoration: none; border:1px solid var(--cn-giallo); background: transparent; height: 100%; overflow: hidden;}
-.card-bando .card-body { background: transparent; z-index: 2;  }
-.card-bando .card-body .card-title { color: rgb(158 131 81); font-size: 1.5em; line-height: 1.1em; margin-bottom:.5em; }
-.card-bando .card-footer { border-color: transparent; padding: 24px; z-index: 2; color: var(--bs-secondary); }
-.card-bando .card-footer span { text-transform: uppercase; font-size: .82em; font-weight: 500; }
-.card-bando .card-footer span { color: rgb(158, 131, 81); }
+.card-bando .card-body { background: var(--bs-white); }
+.card-bando .card-body .card-title { color: rgb(158 131 81); font-size: 1.3em; line-height: 1.2em; margin-bottom:.5em; }
+.card-bando .card-footer { background: rgba(var(--bs-white-rgb),.5); border-color: rgba(var(--cn-giallo-rgb),.4); padding: 1em 24px; z-index: 2; color: var(--bs-secondary); }
+.card-bando .card-footer span { text-transform: uppercase; font-size: .9em; font-weight: 500; color: rgb(158, 131, 81); }
+.card-bando:hover .card-footer { background: rgba(var(--bs-white-rgb),.7); }
 
 .bg-100 .card-luogo.card-luogo-small,
 .bg-200 .card-luogo.card-luogo-small { border: 1px solid rgba(var(--cn-giallo-rgb), .4); }
@@ -768,6 +768,7 @@ select.just-validate-success-field {
 .slider_itinerari .splide__pagination__page .is-active { background-color: var(--bs-primary) }
 
 .slider_bandi { position: relative; }
+.slider_bandi .splide__track { overflow: visible; }
 .slider_bandi .splide__pagination { display: flex; justify-content: flex-start; margin-top: 1em; }
 .slider_bandi .splide__pagination__page { width: 1.5em; height: .2em; background-color: rgba(var(--bs-black-rgb),.3); margin-right: .5em; }
 .slider_bandi .splide__pagination__page.is-active { background-color: rgb(158, 131, 81); }
