--- a/assets/css/cultura-napoli-custom-style.css
+++ b/assets/css/cultura-napoli-custom-style.css
@@ -569,9 +569,11 @@ a.card.card-focus { text-decoration: none; }
 
 a.card.card-novita { text-decoration: none; }
 .card-novita .img-responsive { overflow: hidden; border-radius: var(--bs-border-radius-lg) var(--bs-border-radius-lg) 0 0; z-index: 2; }
-.card.card-novita .card-body { padding: 1em 1em; background: #fff; border-radius: 0 0 8px 8px; z-index: 2; }
+.card.card-novita .card-body { padding: 1em 1em; background: #fff; z-index: 2; }
+.card.card-novita .card-body.no-footer { border-radius: 0 0 8px 8px; }
 .card-novita .card-body .card-title.h4,
 .card-novita .card-body h4.card-title { color: var(--bs-black); font-size: 1.3em; line-height: 1.1em; margin-bottom:.5em; }
+.card.card-novita .card-footer { padding-left: 1em; padding-right: 1em; }
 
 .bg-100 .card-luogo.card-luogo-small,
 .bg-200 .card-luogo.card-luogo-small { border: 1px solid rgba(var(--cn-giallo-rgb), .4); }
@@ -778,6 +780,12 @@ select.just-validate-success-field {
 .slider_itinerari .splide__pagination { display: block; margin-top: 1em; }
 .slider_itinerari .splide__pagination__page { width: 2em; height: .2em; background-color: rgba(var(--bs-black-rgb),.4); margin: 0 .5em 0 0; }
 .slider_itinerari .splide__pagination__page .is-active { background-color: var(--bs-primary) }
+
+#novita_evidenza { border-bottom: 1px solid rgba(var(--bs-black-rgb),.2); }
+.slider_novita .splide__track { padding: 1em !important; }
+.slider_novita .splide__pagination { display: block; margin-top: 1em; padding-left: 1em; padding-right: 1em; }
+.slider_novita .splide__pagination__page { width: 2em; height: .2em; background-color: rgba(var(--bs-black-rgb),.4); margin: 0 .5em 0 0; }
+.slider_novita .splide__pagination__page .is-active { background-color: var(--bs-primary) }
 
 /* CHI SIAMO */
 
